Add Phaser 3 as migration from Phaser 2

--- a/web/index.html
+++ b/web/index.html
@@ -17,22 +17,13 @@
         }
     </style>
 
-    <script>const globalPort = 8009;</script>
-    <script src="/js/socket.io-1.0.4.js"></script>
-    <script src="/js/phaser-arcade-physics.min.js"></script>
-    <script src="/js/inheritance.js"></script>
-    <script src="/js/utils.js"></script>
-    <script src="/js/Battle/spells.js"></script>
-    <script src="/js/Battle/battle.js"></script>
-    <script src="/js/MagesBot.js"></script>
-    <script src="/js/LocalSockets.js"></script>
-    <script src="/js/LocalServer.js"></script>
-    <script src="/js/state.boot.js"></script>
-    <script src="/js/state.preloader.js"></script>
-    <script src="/js/state.main_menu.js"></script>
-    <script src="/js/state.game.js"></script>
-    <script src="/js/spells.js"></script>
-    <script src="/js/client.js"></script>
+    <script>const WEBSOCKET_URL = 'ws://127.0.0.1:8009/ws';</script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.50.0/dist/phaser.js"></script>
+    <script src="/js/scene.boot.js"></script>
+    <script src="/js/scene.preloader.js"></script>
+    <script src="/js/scene.main_menu.js"></script>
+    <script src="/js/scene.game.js"></script>
+    <script src="/js/game.js"></script>
 </head>
 <body>
 </body>
