--- a/web/index.html
+++ b/web/index.html
@@ -19,10 +19,11 @@
 
     <script>const WEBSOCKET_URL = 'ws://127.0.0.1:8009/ws';</script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.50.0/dist/phaser.js"></script>
-    <script src="/js/scene.boot.js"></script>
-    <script src="/js/scene.preloader.js"></script>
-    <script src="/js/scene.main_menu.js"></script>
-    <script src="/js/scene.game.js"></script>
+    <script src="/js/spells.js"></script>
+    <script src="/js/scenes/scene.boot.js"></script>
+    <script src="/js/scenes/scene.preloader.js"></script>
+    <script src="/js/scenes/scene.main_menu.js"></script>
+    <script src="/js/scenes/scene.game.js"></script>
     <script src="/js/game.js"></script>
 </head>
 <body>
