Increase shield diff up to 600ms

--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
         }
     </style>
 
-    <script>const WEBSOCKET_URL = '//ws';</script>
+    <script>const WEBSOCKET_URL = '/ws';</script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.50.0/dist/phaser.js"></script>
     <script src="/js/spells.js"></script>
     <script src="/js/scenes/scene.boot.js"></script>
