--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
     <script src="/js/spells.js"></script>
     <script src="/js/scenes/scene.boot.js"></script>
     <script src="/js/scenes/scene.preloader.js"></script>
-    <script src="/js/scenes/scene.main_menu.js"></script>
+    <script src="/js/scenes/scene.main_menu.js?v=2"></script>
     <script src="/js/scenes/scene.game.js"></script>
     <script src="/js/game.js"></script>
 </head>
