--- a/web/index.html
+++ b/web/index.html
@@ -21,9 +21,9 @@
     <script src="//cdn.jsdelivr.net/npm/phaser@3.50.0/dist/phaser.js"></script>
     <script src="/js/spells.js"></script>
     <script src="/js/scenes/scene.boot.js"></script>
-    <script src="/js/scenes/scene.preloader.js"></script>
-    <script src="/js/scenes/scene.main_menu.js?v=2"></script>
-    <script src="/js/scenes/scene.game.js"></script>
+    <script src="/js/scenes/scene.preloader.js?v=3"></script>
+    <script src="/js/scenes/scene.main_menu.js?=3"></script>
+    <script src="/js/scenes/scene.game.js?v=3"></script>
     <script src="/js/game.js"></script>
 </head>
 <body>
